@@ -23,7 +23,10 @@
 #import "AtlasSprite.h"
 #import "Support/FileUtils.h"
 #import "Support/CGPointExtension.h"
+#import "DrawingPrimitives.h"
 
+// will draw a bounding box
+//#define BITMAP_FONT_ATLAS_DEBUG 1
 
 #pragma mark -
 #pragma mark FNTConfig Cache - free functions
@@ -384,7 +387,9 @@ void FNTConfigRemoveCache( void )
 
 		fontChar.visible = YES;
 
-		fontChar.position = ccp( nextFontPositionX + fontDef.xOffset + fontDef.xAdvance/2.0f, (configuration->commonHeight - fontDef.yOffset) - rect.size.height/2.0f );
+		fontChar.position = ccp( nextFontPositionX + fontDef.xOffset +
+								fontDef.xAdvance/2.0f, (configuration->commonHeight - fontDef.yOffset) -
+								rect.size.height/2.0f );		
 		
 //		NSLog(@"position.y: %f", fontChar.position.y);
 		
@@ -394,7 +399,7 @@ void FNTConfigRemoveCache( void )
 		prev = c;
 		
 		tmpSize.width += configuration->bitmapFontArray[c].xAdvance + kerningAmmount;
-		tmpSize.height = MAX( rect.size.height, contentSize_.height);
+		tmpSize.height = configuration->commonHeight;
 		
 		// Apply label properties
 		[fontChar setOpacityModifyRGB:opacityModifyRGB_];
@@ -458,4 +463,18 @@ void FNTConfigRemoveCache( void )
 		[self createFontChars];
 	}
 }
+
+#pragma mark BitmapFontAtlas - Debug
+
+#if BITMAP_FONT_ATLAS_DEBUG
+-(void) draw
+{
+	[super draw];
+	CGSize s = [self contentSize];
+	drawLine( CGPointZero, ccp(s.width,0) );
+	drawLine(CGPointZero, ccp(0,s.height));
+	drawLine( ccp(s.width,0), ccp(s.width,s.height) );
+	drawLine( ccp(s.width,s.height), ccp(0,s.height));
+}
+#endif // BITMAP_FONT_ATLAS_DEBUG
 @end
