@@ -1,5 +1,6 @@
 version 0.8.2 - XX-MMM-2009
  . Actions: added Ease Elastic actions (issue #530)
+ . BitmapFontAtlas: fixed contentSize (issue #538)
  . CocosDenshion: muted property in SimpleAudioEngine (issue #526)
  . Director: added convertToUI and renamed convertCoordinate to convertToGL (issue #531)
  . Documentation: doxygen builds OK when there are spaces in the path (issue #540)
